--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               CGI-AuthenticationFramework
-version:            0.02
+version:            0.03
 abstract:           A CGI authentication framework that utilizes mySQL for the user and session management
 author:
     - Phil Massyn <phil@massyn.net>
@@ -12,6 +12,7 @@ build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Auth::Yubikey_WebClient:  1
+    Captcha::reCAPTCHA:   1
     CGI::Cookie:          1
     Digest::MD5:          1
     Net::SMTP:            1
