--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               CGI-AuthenticationFramework
-version:            0.03
+version:            0.04
 abstract:           A CGI authentication framework that utilizes mySQL for the user and session management
 author:
     - Phil Massyn <phil@massyn.net>
@@ -15,6 +15,7 @@ requires:
     Captcha::reCAPTCHA:   1
     CGI::Cookie:          1
     Digest::MD5:          1
+    HTML::Entities:       1
     Net::SMTP:            1
     Test::More:           0
 no_index:
